--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html>
-
- <head>...</head>
+ <head>
    <meta charset="UTF-8">
-   <title>
+   <title></title>
  </head>
-
  <body>
-   <p>Привет, мир!</p>
+   <h1>Добро пожаловать!</h1>
+   <p>Это всего лишь пробная версия. Надеюсь что она вышла удачно :)</p>
  </body>
-
 </html>
